fix bug with button alignment; update bower version

--- a/src/style/reset.less
+++ b/src/style/reset.less
@@ -240,7 +240,6 @@ textarea::-moz-focus-inner { border: 0; padding: 0; }
 button, input, select, textarea
 {
 	appearance: none;
-	vertical-align: middle;
 	line-height: normal;
 	font: inherit;
 }
