--- a/src/style/vars.less
+++ b/src/style/vars.less
@@ -35,7 +35,7 @@
 // BUTTONS
 // --------------------------------------------------
 
-@button-padding-ver: 0.678em;
+@button-padding-ver: 0.68em;
 @button-padding-hor: 1.15em;
 @button-margin: 0.8rem;
 
